--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "local-workspace": "workspace:*"
+  },
+  "workspaces": [
+    "local-workspace"
+  ],
   "author": "",
   "license": "ISC",
   "packageManager": "yarn@3.2.0"
