add peerDependencies, module, types in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "clean": "echo",
     "build-esm": "yarn build-esm",
@@ -10,6 +12,10 @@
     "copy-other-files": "rsync -avu --exclude={'*.ts','*.tsx','*.json'} './src/' './lib'",
     "build": "yarn clean && npm run copy-other-files && yarn build-esm",
     "test": "jest"
+  },
+  "peerDependencies": {
+    "local-workspace": "^1.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "local-workspace": "workspace:*"
